RESOLVED FIXED310639
AX: WebKit doesn't respect aria-owns when computing text-under-element for accname purposes
https://bugs.webkit.org/show_bug.cgi?id=310639
Summary AX: WebKit doesn't respect aria-owns when computing text-under-element for ac...
Tyler Wilcock
Reported 2026-03-24 10:09:55 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-24 10:10:03 PDT
Tyler Wilcock
Comment 2 2026-03-24 14:32:42 PDT
EWS
Comment 3 2026-03-26 14:57:48 PDT
Committed 310020@main (59c54c4d2c51): <https://commits.webkit.org/310020@main> Reviewed commits have been landed. Closing PR #61270 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.